[v8] Fix Chrome's "Experimental JavaScript" switch.

BUG=chromium:602336
LOG=Y

Review URL: https://codereview.chromium.org/1876903002

Cr-Commit-Position: refs/heads/master@{#386675}

Former-commit-id: 75fddc14b864457d77fff8244e3835131435cb89